--- a/SoccerTournamentFrontend/src/components/footer.css
+++ b/SoccerTournamentFrontend/src/components/footer.css
@@ -1,6 +1,6 @@
 .main-footer {
   color: white;
-  background-color: aquamarine;
+  background-color: black;
   padding-top: 3em;
   position: relative;
   bottom: 0;
