--- a/SoccerTournamentFrontend/src/components/navBar.css
+++ b/SoccerTournamentFrontend/src/components/navBar.css
@@ -36,3 +36,19 @@
   border-radius: 4px;
   transition: all 0.2s ease-in;
 }
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
